objects/Secure_Client__c.object
<CustomObject>
    <fields>
        <fullName>Areas_to_Focus__c</fullName>
        <label>Areas to Focus</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Client__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Client</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Secure Client Details</relationshipLabel>
        <relationshipName>Secure_Client_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Meeting_Frequency__c</fullName>
        <inlineHelpText>Expected meeting frequency by member of the client team to drive lonely client metrics</inlineHelpText>
        <label>Meeting Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Monthly</fullName>
                </value>
                <value>
                    <fullName>Quarterly</fullName>
                </value>
                <value>
                    <fullName>Semi-Annually</fullName>
                </value>
                <value>
                    <fullName>Annually</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Secure_Client_Note__c</fullName>
        <inlineHelpText>This is visible to anyone on the client team</inlineHelpText>
        <label>Key Notes</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
</CustomObject>